# fw-ec-utils

./: .gitignore  Cargo.toml  Makefile  README.md  fw-fanctrl.service  plot_curves.py
curves/: example-curve.curvedef  fw-deaf.curvedef
ec-core/: Cargo.toml
ec-core/src/: common.rs  lib.rs
examples/: example_plugin.c  weighted_moving_average.cpp
fw-chargemon/: Cargo.toml
fw-chargemon/src/: battery.rs  charging.rs  ec_mmap_offsets.rs  main.rs  usb.rs
fw-fanctrl-rs/: Cargo.toml  config.toml
fw-fanctrl-rs/curves/: fw-aeolus.curvedef  fw-laziest.curvedef  fw-lazy.curvedef  fw-medium.curvedef
fw-fanctrl-rs/examples/: internal_predictive_plugin.cpp
fw-fanctrl-rs/src/: daemon.rs  fans.rs  main.rs  temp.rs
fw-fanctrl-rs/src/fan_curve/: mod.rs  plugins.rs
fw-fanctrl-rs/src/fan_curve/curve_parsing/: mod.rs
include/: PLUGINS.md  fw-fanctrl-rs.h
src/: common.rs  daemon.rs  fan_curve.rs  main.rs  plot.rs  temp.rs
src/fan_curve/: curve_lut_gen.rs  mod.rs  plugins.rs  tests.rs
src/fan_curve/curve_parsing/: external_curves.rs  mod.rs
