[workspace]
resolver = "3"
members = [
    "ec-core",
    "fw-fanctrl-rs",
    "fw-chargemon"
]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
lto = "fat"

[profile.release.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
